selfhost/test/parser/typeidentifiers_error_empty_typeargs.out
Error at %FILE_NAME%:1:12
Unexpected token '>', expected 'identifier':
  |  val _: Foo<>
                ^